# ibs-rs

./: Cargo.toml  README.md
benches/: blm05.rs  cui07.rs  hess03.rs  pat02.rs
docs/: index.html
docs/blm05 sign/base/: benchmark.json  sample.json  tukey.json
docs/blm05 sign/new/: estimates.json  raw.csv
docs/blm05 sign/report/: index.html
docs/blm05 verify/base/: raw.csv  tukey.json
docs/blm05 verify/new/: benchmark.json  estimates.json  sample.json
docs/blm05 verify/report/: index.html
docs/cui07 sign/base/: estimates.json  sample.json
docs/cui07 sign/new/: benchmark.json  raw.csv  tukey.json
docs/cui07 sign/report/: index.html
docs/cui07 verify/base/: benchmark.json  raw.csv
docs/cui07 verify/new/: estimates.json  sample.json  tukey.json
docs/cui07 verify/report/: index.html
docs/hess03 sign/base/: estimates.json  sample.json  tukey.json
docs/hess03 sign/new/: benchmark.json  raw.csv
docs/hess03 sign/report/: index.html
docs/hess03 verify/base/: sample.json  tukey.json
docs/hess03 verify/new/: benchmark.json  estimates.json  raw.csv
docs/hess03 verify/report/: index.html
docs/pat02 method 1 verify/base/: sample.json
docs/pat02 method 1 verify/new/: benchmark.json  estimates.json  raw.csv  tukey.json
docs/pat02 method 1 verify/report/: index.html
docs/pat02 method 2 verify/base/: estimates.json
docs/pat02 method 2 verify/new/: benchmark.json  raw.csv  sample.json  tukey.json
docs/pat02 method 2 verify/report/: index.html
src/: lib.rs
src/blm05/: mod.rs
src/cui07/: mod.rs
src/hess03/: mod.rs
src/pat02/: mod.rs
(+6 files in other folders)
