[package]
name = "ibs-rs"
version = "0.1.0"
authors = ["William Arnold <will748@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bls12_381 = {version = "0.1.1", features = ["endo"]}
sodiumoxide = "0.2.6"
