[package]
name = "ibs-rs"
version = "0.1.0"
authors = ["William Arnold <will748@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pairing = {version = "0.16.0"}
sodiumoxide = "0.2.6"
rand_chacha = "0.2.2"
ff = "0.6.0"
group = "0.6.0"
rand_core = "0.5.1"
