[package]
name = "ibs-rs"
version = "0.1.0"
authors = ["William Arnold <will748@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

amcl_wrapper = "0.4"
rand = "0.7"

[dev-dependencies]

criterion = "0.3"

[[bench]]
name = "hess03"
harness = false

[[bench]]
name = "pat02"
harness = false

